        new view system, to the view 'headers'. 

      - Switched to Kupu 1.4 (the current 'trunk' (unreleased) version).

      - Moved the 'kupu/silva' directory to 'Silva/kupu' (so to the Silva core)
        to ease release management.

      - Renamed 'kupu' and 'kupu_silva' in the Silva root to 'service_kupu' and
        'service_kupu_silva', respectively.

    Bugs fixed:
    
      - The xslt rendering allowed empty width and height attributes on
        images, which breaks in IE. These are now caught.

      - The zip import of assets (as opposed to the fullmedia zip import)
        did not take into account the 'replace identical ids' option. It 
        does now.

      - The lookup window had some problems with incorrect content type
        filtering, and a strange javascript issue, where 'document' was
        empty. Both are fixed.

      - FSDTMLMethod and FSPageTemplate were imported directly 
        from FileSystemSite product instead of from fssite module

      - Changed mangle.Path.fromObject() so it doesn't return '' anymore when
        from and to objects are the same.
  
      - Handle user with user id different from login properly
        (issue 1471)

      - Fixed bug in XML export (to_xml()) of Link objects, escaping 
        (entitizing) title and url properly now.

      - Removed quote (probably typo) from some JS string in lookupwindowfield.

    Ported from 1.5 branch

      - Explicitly delete model from request in view_version() to break a
        cyclic reference that prevents model from being garbage collected.

      - Add ZCatalog index upgrader to comply with an API change in Zope.

      - The new lookup window was registering resources under the name
        scripts. This name is too broad and was in fact being
        overridden by a Silva extension that introduced its own
        scripts, causing the Silva core to break. Renamed this to
        silva_scripts in the core.
     