@@ -416,6 +416,9 @@ class ImageHandler(SilvaBaseHandler):
     def startElementNS(self, name, qname, attrs):
         if name == (NS_URI, 'image_asset'):
             self.setData('id', attrs[(None, 'id')])
+            self.setData('web_format', attrs[(None, 'web_format')])
+            self.setData('web_scale', attrs[(None, 'web_scale')])
+            self.setData('web_crop', attrs[(None, 'web_crop')])
 
     def endElementNS(self, name, qname):
         if name == (NS_URI, 'image_asset'):
@@ -426,6 +429,10 @@ class ImageHandler(SilvaBaseHandler):
                 info.ZipFile().read(
                     'assets/' + self.getData('zip_id')))
             self.parent().manage_addProduct['Silva'].manage_addImage(uid, '', file)
+            self.parent()[uid].set_web_presentation_properties(
+                self.getData('web_format'),
+                self.getData('web_scale'),
+                self.getData('web_crop'))
             
 class FileHandler(SilvaBaseHandler):
     def getOverrides(self):
